added latest changes on restaurant and donation

--- a/miniprogram/pages/restaurant/restaurant.wxss
+++ b/miniprogram/pages/restaurant/restaurant.wxss
@@ -1,7 +1,4 @@
-/* pages/donation/donation.wxss */
-.bg-white-yellow {
-  background-color: #faf8e4;
-}
+/* miniprogram/pages/restaurant.wxss */
 .white-yellow {
   color: #faf8e4;
 }
