--- a/miniprogram/pages/donation/donation.wxml
+++ b/miniprogram/pages/donation/donation.wxml
@@ -1,17 +1,46 @@
-<!--pages/donation/donation.wxml-->
-<!--miniprogram/pages/intro/intro.wxml-->
-<!-- <view style="width:100vw;">
-    <view style="width:80vw;text-align:center;margin-left:auto;margin-right:auto;margin-top:3rem;">
-      <image src="../../assets/img/logo.png" style="width:8rem; height:8rem"></image>
-      <text style="text-size:1rem">
-        2020年10月16日是联合国确定的第40个世界粮食日，中国扶贫基金会联合多家平台、媒体、单位共同发起“饥饿24小时公益体验活动”（简称：饥饿24），倡导18-60周岁有条件的人在10月16日8：00-17日24：00期间，挑战24小时不吃饭。体验饥饿，珍惜粮食，并捐出一天餐费帮助我国儿童改善营养，帮助发展中国家抗击饥饿。
-      </text>
-      <button class="index-button cu-btn round bg-yellow margin-lg" bindtap="toGamePage">开始挑战</button>
-    </view>
-  </view> -->
-  <view class="container">
+<!-- <view class="container">
     <web-view
-      src="http://www.cfpa.org.cn">
+      src="http://10000001.juanzeng.org.cn/Product/Product.html?product_id=10052&donation_type=0&openid=oubstuD5xqIe9wbVYVPmf2SKESjk&code=041rDl1004vMnK1DOy100rZyPF2rDl1f">
     </web-view>
+  </view> -->
+<view>
+  <image src="https://hunger24.cfpa.org.cn/images/donation_banner.png"></image>
+  <view class="cu-bar justify-center bg-white">
+    <view class="action sub-title">
+      <text class="text-xl text-bold warm-yellow">关于我们</text>
+      <text class="bg-warm-yellow" style="width:2rem"></text>
+      <!-- last-child选择器-->
+    </view>
   </view>
+  <image src="https://hunger24.cfpa.org.cn/images/donation_intro.jpeg"></image>
+  <view class="cu-bar tabbar border shop text-center">
 
+    <view class="action">
+      <!-- <button class="cu-btn bg-green shadow" bindtap="showModal" data-target="bottomModal">Bottom</button> -->
+      <button class="bg-red submit" data-target="isPayModalDisplayed" bindtap="showPayModal"
+        style="width:100vw;margin-left:auto;margin-right:auto; position:fixed;bottom:0;">捐一餐</button>
+    </view>
+    <view class="cu-modal bottom-modal {{isPayModalDisplayed ? 'show' : ''}}">
+      <view class="cu-dialog">
+        <view class="padding-xl" style="text-align: left">
+          请输入您想捐赠的金额：
+          <view class="flex-sub">
+            <view class="solid-bottom text-xl padding">
+              <!-- <text class="text-black text-bold">您的捐款已提交成功！</text> -->
+              <view class="cu-form-group margin-top">
+                <!-- <view class="title">捐款金额</view> -->
+                <input placeholder="请填写1以上的整数"></input>
+              </view>
+            </view>
+            <!-- <view class="padding">感谢您为孩子捐赠能量~</view> -->
+            <view class="padding" style="text-align: left">*一餐=4.2元</view>
+          </view>
+        </view>
+        <view class="cu-bar bg-white-yellow">
+          <text class="action text-red" bindtap="submitPayment">确定</text>
+          <text class="action text-yellow" style="text-size:3rem" bindtap="hidePayModal">取消</text>
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
