--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -6,13 +6,13 @@
 				2020年10月16日是联合国确定的第40个世界粮食日，中国扶贫基金会联合多家平台、媒体、单位共同发起“饥饿24小时公益体验活动”（简称：饥饿24），倡导18-60周岁有条件的人在10月16日8：00-17日24：00期间，挑战24小时不吃饭。体验饥饿，珍惜粮食，并捐出一天餐费帮助我国儿童改善营养，帮助发展中国家抗击饥饿。
 			</text>
 			<button class="index-button cu-btn round bg-yellow margin-lg" bindtap="switchTab" data-tab-index="1">进入游戏</button>
-			<button class="index-button cu-btn round bg-yellow margin-lg" bindtap="goToRestaurant">进入饥饿餐厅</button>
+			<button class="index-button cu-btn round bg-yellow margin-lg" bindtap="toRestaurant">进入饥饿餐厅</button>
 		</view>
 	</view>
 </block>
 <block wx:if="{{selectedTab == 1}}">
 	<view
-		style="width:100vw; height:100vh; background-image: url('https://image.freepik.com/free-vector/brown-soil-texture-background_1308-20483.jpg')">
+		style="width:100vw; height:100vh; background-image: url('https://hunger24.cfpa.org.cn/images/soil.png')">
 		<!-- <view> -->
 
 		<!-- </view> -->
@@ -49,7 +49,7 @@
 					剩余铲子：
 				</text>
 				<view style="margin-top:20rpx">
-					<image wx:for="{{gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/shovel.png" style="width:3rem; height:3rem"></image>
+					<image wx:for="{{gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/铲子.png" style="width:3rem; height:3rem"></image>
 				</view>
 			</view>
 		</view>
