--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -55,8 +55,7 @@
 		</view>
 		<canvas style="width:100vw;height:50vh;" canvas-id="game"></canvas>
 		<view class="padding" style="text-align:center">
-			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px"
-				bindtap="gameControl">{{gameStatus}}</button>
+			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px" bindtap="gameControl">{{gameStatus}}</button>
 		</view>
 	</view>
 	<view class="cu-modal {{modalName == 'rule' ? 'show' : ''}}">
@@ -87,13 +86,12 @@
 				</view>
 			</view>
 			<view class="padding-xl bg-white-yellow">
-				<text wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropCollected}}能量值+ {{cropValDict[cropCollected]}}~\n
-					{{cropIntroDict[crop]}}
-				</text>
+				<text wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropsData[cropCollected]['name']}}, 能量值+{{cropsData[cropCollected]['val']}}~\n
+    		{{cropsData[cropCollected]['intro']}}
+   			</text>
 				<text wx:if="{{!collectSuccess}}">哎呀！很遗憾，你没有收割成功，继续努力吧~
 				</text>
-				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share"
-					data-tab-index="1">邀请好友获取铲子</button>
+				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share" data-tab-index="1">邀请好友获取铲子</button>
 			</view>
 		</view>
 	</view>
@@ -121,9 +119,7 @@
 			<view class="padding-xl bg-white-yellow "><text class="padding-lg"
 					style="font-size:1rem">挖地侠，你饿了么？\n请留步，再挖一点作物获取能量吧\n</text>
 
-				<button class="index-button cu-btn round bg-yellow margin-sm" open-type="share">获取能量</button> <button
-					class="index-button cu-btn round bg-yellow margin-sm" bindtap="hideModal">再挖一会</button><button
-					class="index-button cu-btn round bg-yellow margin-sm" bindtap="switchTab" data-tab-index="2">捐能量</button>
+				<button class="index-button cu-btn round bg-yellow margin-sm" open-type="share">获取能量</button> <button class="index-button cu-btn round bg-yellow margin-sm" bindtap="hideModal">再挖一会</button><button class="index-button cu-btn round bg-yellow margin-sm" bindtap="switchTab" data-tab-index="2">捐能量</button>
 			</view>
 		</view>
 	</view>
