optimize the load of the user info; add the submission of the game result; fix the display of the percentage; fix the display of the challenge end;

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,3 +1,4 @@
+<!-- homepage -->
 <block wx:if="{{selectedTab == 0}}">
 	<view class="bg-white-yellow" style="width:100vw; height:100vh">
 		<view style="width:80vw;text-align:center;margin-left:auto;margin-right:auto; padding-top:8vh">
@@ -10,38 +11,33 @@
 		</view>
 	</view>
 </block>
+
+<!-- game page -->
 <block wx:if="{{selectedTab == 1}}">
 	<view style="width:100vw; height:100vh; background-image: url('https://hunger24.cfpa.org.cn/images/soil.png')">
-		<!-- <view> -->
-
-		<!-- </view> -->
-
 		<view style="width:90vw;margin-left:auto;margin-right:auto;">
-
 			<view class="flex solid-bottom justify-between padding-top-sm">
 				<text class="cuIcon-back navbar-icon warm-yellow" bindtap="switchTab" data-tab-index="0"></text>
 				<view>
 					<text class="cuIcon-info navbar-icon warm-yellow" style="margin-right:10rpx" bindtap="showModal"
 						data-modal-name="rule"></text>
-					<!-- <text class="cuIcon-roundclose navbar-icon warm-yellow" bindtap="stopGame"></text> -->
 					<text class="cuIcon-roundclose navbar-icon warm-yellow" bindtap="shareGame"></text>
 				</view>
 			</view>
-
 			<view class="width-90-inline horizontal-center" style="margin-top:0">
 				<text class="text-white" style="width:30vw; text-size:1rem">
-					剩余时间：
+					剩余时间：{{remainingTimePercentage}}%
 				</text>
 				<view class="cu-progress round sm striped" style="margin-top:40rpx;">
-					<view class="bg-green" style="width:{{remainingTimePercentage}}%;">{{remainingTimePercentage}}</view>
+					<view class="bg-green" style="width:{{100 - remainingTimePercentage}}%;"></view>
 				</view>
 			</view>
 			<view class="width-90-inline horizontal-center">
 				<text class="text-white" style="width:30vw; text-size:1rem">
-					剩余能量：
+					剩余能量：{{remainingEnergyPercentage}}%
 				</text>
 				<view class="cu-progress round sm striped" style="margin-top:40rpx;">
-					<view class="bg-red" style="width:{{remainingEnergyPercentage}}%;">{{remainingEnergyPercentage}}</view>
+					<view class="bg-red" style="width:{{remainingEnergyPercentage}}%;"></view>
 				</view>
 			</view>
 			<view class="width-90-inline horizontal-center">
@@ -49,13 +45,15 @@
 					剩余铲子：
 				</text>
 				<view style="margin-top:20rpx">
-					<image wx:for="{{gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/铲子.png" style="width:3rem; height:3rem"></image>
+					<image wx:for="{{gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/铲子.png"
+						style="width:3rem; height:3rem"></image>
 				</view>
 			</view>
 		</view>
 		<canvas style="width:100vw;height:50vh;" canvas-id="game"></canvas>
 		<view class="padding" style="text-align:center">
-			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px" bindtap="gameControl">{{gameStatus}}</button>
+			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px"
+				bindtap="gameControl">{{gameStatus}}</button>
 		</view>
 	</view>
 	<view class="cu-modal {{modalName == 'rule' ? 'show' : ''}}">
@@ -86,12 +84,14 @@
 				</view>
 			</view>
 			<view class="padding-xl bg-white-yellow">
-				<text wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropsData[cropCollected]['name']}}, 能量值+{{cropsData[cropCollected]['val']}}~\n
-    		{{cropsData[cropCollected]['intro']}}
-   			</text>
+				<text wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropsData[cropCollected]['name']}},
+					能量值+{{cropsData[cropCollected]['val']}}~\n
+					{{cropsData[cropCollected]['intro']}}
+				</text>
 				<text wx:if="{{!collectSuccess}}">哎呀！很遗憾，你没有收割成功，继续努力吧~
 				</text>
-				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share" data-tab-index="1">邀请好友获取铲子</button>
+				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share"
+					data-tab-index="1">邀请好友获取铲子</button>
 			</view>
 		</view>
 	</view>
@@ -115,24 +115,22 @@
 	</view>
 	<view class="cu-modal {{modalName == 'exit' ? 'show' : ''}}">
 		<view class="cu-dialog">
-
 			<view class="padding-xl bg-white-yellow "><text class="padding-lg"
 					style="font-size:1rem">挖地侠，你饿了么？\n请留步，再挖一点作物获取能量吧\n</text>
-
-				<button class="index-button cu-btn round bg-yellow margin-sm" open-type="share">获取能量</button> <button class="index-button cu-btn round bg-yellow margin-sm" bindtap="hideModal">再挖一会</button><button class="index-button cu-btn round bg-yellow margin-sm" bindtap="switchTab" data-tab-index="2">捐能量</button>
+				<button class="index-button cu-btn round bg-yellow margin-sm" open-type="share">获取能量</button> <button
+					class="index-button cu-btn round bg-yellow margin-sm" bindtap="hideModal">再挖一会</button><button
+					class="index-button cu-btn round bg-yellow margin-sm" bindtap="switchTab" data-tab-index="2">捐能量</button>
 			</view>
 		</view>
 	</view>
 </block>
-<block wx:if="{{selectedTab == 2}}">
-	<view class="container">
-		<web-view src="http://www.cfpa.org.cn">
-		</web-view>
-	</view>
-</block>
+
+<!-- rank page -->
 <block wx:if="{{selectedTab == 3}}">
 	<view>Page 4</view>
 </block>
+
+<!-- navigation bar -->
 <view class="navbar">
 	<view class="navbar-tab" bindtap="switchTab" data-tab-index="0">
 		<text class="cuIcon-home navbar-icon" style="color:orange;"></text>
