--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -21,7 +21,8 @@
 				<view>
 					<text class="cuIcon-info navbar-icon warm-yellow" style="margin-right:10rpx" bindtap="showModal"
 						data-modal-name="rule"></text>
-					<text class="cuIcon-roundclose navbar-icon warm-yellow" bindtap="shareGame"></text>
+					<text class="cuIcon-roundclose navbar-icon warm-yellow" bindtap="showModal"
+						data-modal-name="exit"></text>
 				</view>
 			</view>
 			<view class="width-90-inline horizontal-center" style="margin-top:0">
@@ -45,13 +46,13 @@
 					剩余铲子：
 				</text>
 				<view style="margin-top:20rpx">
-					<image wx:for="{{gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/铲子.png"
+					<image wx:for="{{gameSetting.shovel > 5? 5: gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/铲子.png"
 						style="width:3rem; height:3rem"></image>
 				</view>
 			</view>
 		</view>
 		<canvas style="width:100vw;height:50vh;" canvas-id="game"></canvas>
-		<view class="padding" style="text-align:center">
+		<view wx:if="{{gameSetting.shovel > 0}}" class="padding" style="text-align:center">
 			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px"
 				bindtap="gameControl">{{gameStatus}}</button>
 		</view>
@@ -64,14 +65,17 @@
 					<text class="cuIcon-close text-red"></text>
 				</view>
 			</view>
-			<view class="padding-xl bg-white-yellow">
-				1.你的能量随着时间迁移而消耗，每1小时减少1份能量哦。
-				2.每收割一种作物，你会获取相应的能量。
-				3.每次作物收割完，土地上会长出新的作物。
-				4. 每次作物更新后，你的定点坐标线移动速度加快。
-				5. 铲子用尽时，你可以通过邀请一位好友增加一把铲子。
-				6. 24小时过去后，若你的能量大于0，挑战成功；若等于0，挑战失败。
+			<view class="padding-lg bg-white-yellow" style="text-align:left">
+				<text >
+				饥饿24小时挑战已经开始...\n
+				1. 点击“在这儿挖”开始收割作物吧！\n
+				2. 每收割一种作物，你会获取相应的能量~\n
+				3. 每次作物收割完，土地上会长出新的作物哦。\n
+				4. 但你的能量也会随着时间迁移而消耗。\n
+				5. 铲子用尽时，你可以通过邀请一位好友增加一把铲子。\n
+				6. 24小时过去后，若你还有剩余的能量，就是挑战成功啦！\n
 				开始挑战吧！
+			</text>
 			</view>
 		</view>
 	</view>
@@ -84,11 +88,11 @@
 				</view>
 			</view>
 			<view class="padding-xl bg-white-yellow">
-				<text wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropsData[cropCollected]['name']}},
+				<text style="text-size:2rem" wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropsData[cropCollected]['name']}},
 					能量值+{{cropsData[cropCollected]['val']}}~\n
 					{{cropsData[cropCollected]['intro']}}
 				</text>
-				<text wx:if="{{!collectSuccess}}">哎呀！很遗憾，你没有收割成功，继续努力吧~
+				<text style="text-size:2rem" wx:if="{{!collectSuccess}}">哎呀！很遗憾，你没有收割成功，继续努力吧~
 				</text>
 				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share"
 					data-tab-index="1">邀请好友获取铲子</button>
@@ -103,14 +107,20 @@
 					<text class="cuIcon-close text-red"></text>
 				</view>
 			</view>
-			<view><canvas canvas-id="shareResult" style="width:600px;height:900px"> </canvas></view>
-			<!-- <view class="padding-xl">
-    <text wx:if="{{finalSuccess}}">恭喜你！在24小时过去之后还有剩余能量，完成了饥饿24的挑战，将小程序分享给好友向他们发出挑战吧！
+			<!-- <view><canvas canvas-id="shareResult" style="width:600px;height:900px"> </canvas></view> -->
+			<view class="padding-lg" >
+    <text  wx:if="{{finalSuccess}}">恭喜你！在24小时过去之后还有剩余能量，完成了饥饿24的挑战，将小程序分享给好友向他们发出挑战吧！
    </text>
-   <text wx:if="{{!finalSuccess}}">哎呀！很遗憾，你的能量为0，没有完成饥饿24挑战，对好友发起挑战吧~
-   </text>
-   <button class="index-button cu-btn round bg-yellow margin-lg" open-type="share" data-tab-index="1">分享给好友</button>
-   </view> -->
+   <text class="padding-lg" wx:if="{{!finalSuccess}}">差点完成饥饿24小时的你，有没有体会到饥饿的艰辛呢？对好友发起挑战，或者点击下方为饥饿的孩子们捐一餐吧~
+	 </text>
+			</view>
+			<view>
+	 <image style="width:80vw; height:80vh" src="https://hunger24.cfpa.org.cn/images/share_poster.png"></image>
+	 <!-- <image wx:if="{{finalSuccess}}" src="https://hunger24.cfpa.org.cn/images/success_poster.png" data-image-url="https://hunger24.cfpa.org.cn/images/success_poster.png"></image>
+	 <image wx:if="{{!finalSuccess}}" src="https://hunger24.cfpa.org.cn/images/failure_poster.png" data-image-url="https://hunger24.cfpa.org.cn/images/failure_poster.png"></image> -->
+	 <button class="index-button cu-btn round bg-yellow margin-lg" open-type="share" data-tab-index="1">分享给好友</button>
+	 <button class="index-button cu-btn round bg-yellow margin-lg" bindtap="saveImageToAlbum">保存图片</button>
+   </view>
 		</view>
 	</view>
 	<view class="cu-modal {{modalName == 'exit' ? 'show' : ''}}">
@@ -123,11 +133,26 @@
 			</view>
 		</view>
 	</view>
+	<view class="cu-modal {{modalName == 'shareShovel'? 'show' : ''}}">
+		<view class="cu-dialog">
+			<view class="cu-bar justify-end bg-white-yellow">
+				<view class="content"></view>
+				<view class="action" bindtap="hideModal">
+					<text class="cuIcon-close text-red"></text>
+				</view>
+			</view>
+			<view class="padding-xl bg-white-yellow">
+				<text >哎呀，铲子没有了！邀请好友获得更多的铲子吧！
+				</text>
+				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share" data-tab-index="1">邀请好友</button>
+			</view>
+		</view>
+	</view>
 </block>
 
 <!-- rank page -->
 <block wx:if="{{selectedTab == 3}}">
-	<view>Page 4</view>
+	<view>此功能暂未开放</view>
 </block>
 
 <!-- navigation bar -->
