--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -30,7 +30,7 @@
 					剩余时间：{{remainingTimePercentage}}%
 				</text>
 				<view class="cu-progress round sm striped" style="margin-top:40rpx;">
-					<view class="bg-green" style="width:{{100 - remainingTimePercentage}}%;"></view>
+					<view class="bg-green" style="width:{{remainingTimePercentage}}%;"></view>
 				</view>
 			</view>
 			<view class="width-90-inline horizontal-center">
@@ -46,12 +46,12 @@
 					剩余铲子：
 				</text>
 				<view style="margin-top:20rpx">
-					<image wx:for="{{gameSetting.shovel > 5? 5: gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/铲子.png"
+					<image wx:for="{{gameSetting.shovel > 5? 5: gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/shovel.png"
 						style="width:3rem; height:3rem"></image>
 				</view>
 			</view>
 		</view>
-		<canvas style="width:100vw;height:50vh;" canvas-id="game"></canvas>
+		<canvas style="width:100vw;height:45vh;" canvas-id="game"></canvas>
 		<view wx:if="{{gameSetting.shovel > 0}}" class="padding" style="text-align:center">
 			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px"
 				bindtap="gameControl">{{gameStatus}}</button>
