--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -27,18 +27,18 @@
 			</view>
 			<view class="width-90-inline horizontal-center" style="margin-top:0">
 				<text class="text-white" style="width:30vw; text-size:1rem">
-					剩余时间：{{remainingTimePercentage}}%
+					剩余时间：
 				</text>
 				<view class="cu-progress round sm striped" style="margin-top:40rpx;">
-					<view class="bg-green" style="width:{{remainingTimePercentage}}%;"></view>
+					<view class="bg-green" style="width:{{remainingTimePercentage}}%;">{{remainingTimePercentage}}%</view>
 				</view>
 			</view>
 			<view class="width-90-inline horizontal-center">
 				<text class="text-white" style="width:30vw; text-size:1rem">
-					剩余能量：{{remainingEnergyPercentage}}%
+					剩余能量：
 				</text>
 				<view class="cu-progress round sm striped" style="margin-top:40rpx;">
-					<view class="bg-red" style="width:{{remainingEnergyPercentage}}%;"></view>
+					<view class="bg-red" style="width:{{remainingEnergyPercentage}}%;">{{remainingEnergyPercentage}}%</view>
 				</view>
 			</view>
 			<view class="width-90-inline horizontal-center">
@@ -47,12 +47,12 @@
 				</text>
 				<view style="margin-top:20rpx">
 					<image wx:for="{{gameSetting.shovel > 5? 5: gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/shovel.png"
-						style="width:3rem; height:3rem"></image>
+						style="width:1.5rem; height:1.5rem"></image>
 				</view>
 			</view>
 		</view>
-		<canvas style="width:100vw;height:45vh;" canvas-id="game"></canvas>
-		<view wx:if="{{gameSetting.shovel > 0}}" class="padding" style="text-align:center">
+		<canvas style="width:100vw;height:56.222vh;" canvas-id="game"></canvas>
+		<view wx:if="{{gameSetting.shovel > 0}}" style="text-align:center">
 			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px"
 				bindtap="gameControl">{{gameStatus}}</button>
 		</view>
@@ -156,7 +156,7 @@
 </block>
 
 <!-- navigation bar -->
-<view class="navbar">
+<view class="navbar" style="padding:10rpx">
 	<view class="navbar-tab" bindtap="switchTab" data-tab-index="0">
 		<text class="cuIcon-home navbar-icon" style="color:orange;"></text>
 		<view style="color:orange">主页</view>
