edited game rules

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -78,7 +78,7 @@
 				2. 每收割一种作物，你会获取相应的能量~\n
 				3. 每次作物收割完，土地上会长出新的作物哦。\n
 				4. 但你的能量也会随着时间迁移而消耗。\n
-				5. 铲子用尽时，你可以通过邀请一位好友增加一把铲子。\n
+				5. 铲子用尽时，你可以通过邀请好友或捐一餐获得一把铲子。\n
 				6. 24小时过去后，若你还有剩余的能量，就是挑战成功啦！\n
 				开始挑战吧！
 			</text>
